--- a/vue3-template/package.json
+++ b/vue3-template/package.json
@@ -29,5 +29,13 @@
     "typescript-eslint": "^8.13.0",
     "vite": "^5.4.10",
     "vue-tsc": "^2.1.8"
+  },
+  "lint-staged": {
+    "src/**/*.{js,cjs,ts,vue": [
+      "npm run lint:fix"
+    ],
+    "src/**/*.{html,json,css,scss}": [
+      "npx prettier --write"
+    ]
   }
 }
